feat: introduced TransactionRepository with in-memory data